<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oradar_lidar</name>
  <version>1.0.0</version>
  <description>ROS2 driver for Oradar's newer generation of mechanical 2D LiDARs</description>
  <maintainer email="jiasiting@oradar.com.cn">Oradar</maintainer>
  <license>BSD</license>
  <url type="website">www.orbbec.com.cn</url>
  <author email="jiasiting@oradar.com.cn">jiasiting</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
